# diesel-logger

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: diesel-logger.yml
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
