[package]
name = "diesel_logger"
version = "0.2.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "Times and logs queries executed by diesel"
exclude = [
    "tests/*",
]
homepage = "https://github.com/shssoichiro/diesel-logger"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-logger"

[badges]
maintenance = { status = "as-is" }

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", package = "diesel", features = ["r2d2"] }
log = "0.4.1"
