[package]
name = "diesel_logger"
version = "0.3.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "Times and logs queries executed by diesel"
exclude = ["tests/*"]
homepage = "https://github.com/shssoichiro/diesel-logger"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-logger"
edition = "2021"

[badges]
maintenance = { status = "as-is" }

[dependencies]
diesel = { version = "2.2.3", features = [
    "r2d2",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
log = "0.4.18"
